--- a/Kevin Cookie Company_files/auth_warmup.html
+++ b/Kevin Cookie Company_files/auth_warmup.html
@@ -1,3 +1,1 @@
-
-<!-- saved from url=(0036)https://drive.google.com/auth_warmup -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body></body></html>
+this is food i love so much cookies are so sweet
